[package]
name = "qpp-agent"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
codegen-units = 1

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
uuid = {version = "1.7.0", features = ["v4"]}
axum = {version = "0.7.4", features = ["macros"]}
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
num = "0.4.1"
